tests/transpiler/x/cpp/cross_join_filter.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/cross_join_filter.cpp:8:5: error: non-static data member declared with placeholder ‘auto’
    8 |     auto n;
      |     ^~~~
/workspace/mochi/tests/transpiler/x/cpp/cross_join_filter.cpp:9:5: error: non-static data member declared with placeholder ‘auto’
    9 |     auto l;
      |     ^~~~
