tests/transpiler/x/cpp/cross_join_filter.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-20 18:03:06 GMT+7
#include <iostream>
#include <string>
#include <vector>
#include <map>

struct PairsItem {
    auto n;
    auto l;
};

auto nums = std::vector{1, 2, 3};
auto letters = std::vector{std::string("A"), std::string("B")};
std::vector<PairsItem> pairs = ([]{ std::vector<PairsItem> __items; for (auto n : nums) {for (auto l : letters) { if(((n % 2) == 0)) {__items.push_back(PairsItem{.n = n, .l = l}); }}} return __items; }());

int main() {
    std::cout << std::boolalpha << std::string("--- Even pairs ---") << std::endl;
    for (auto p : pairs) {
        std::cout << std::boolalpha << p.n <<  " " << p.l << std::endl;
    }
    return 0;
}
